--- a/working2/index.html
+++ b/working2/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
 
 
 <script>
