--- a/working2/index.html
+++ b/working2/index.html
@@ -71,25 +71,27 @@ d3.json("https://raw.githubusercontent.com/shepner/ConceptMap/master/working2/tr
     data = jsonData;
     // do the visulization here
     console.log(data);
+    visualizeit(data);
   }
 );
 
-alert("hello");
+visualizeit(links) {
+  
+  alert("hello");
 
-var nodes = {};
+  var nodes = {};
 
-// Compute the distinct nodes from the links.
-links.forEach(
-  function(link) {
-    link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-    link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
-  }
-);
+  // Compute the distinct nodes from the links.
+  links.forEach(
+    function(link) {
+      link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
+      link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
+    }
+  );
 
-var width = 960,
-    height = 500;
+  var width = 960, height = 500;
 
-var force = d3.layout.force()
+  var force = d3.layout.force()
     .nodes(d3.values(nodes))
     .links(links)
     .size([width, height])
@@ -98,12 +100,12 @@ var force = d3.layout.force()
     .on("tick", tick)
     .start();
 
-var svg = d3.select("body").append("svg")
+  var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-// Per-type markers, as they don't inherit styles.
-svg.append ("defs").selectAll("marker")
+  // Per-type markers, as they don't inherit styles.
+  svg.append ("defs").selectAll("marker")
     .data  (["suit", "licensing", "resolved"])
     .enter ().append("marker")
     .attr  ("id", function(d) { return d; })
@@ -116,43 +118,44 @@ svg.append ("defs").selectAll("marker")
     .append("path")
     .attr  ("d", "M0,-5L10,0L0,5");
 
-var path = svg.append("g").selectAll("path")
-    .data (force.links())
-    .enter().append("path")
-    .attr ("class", function(d) { return "link " + d.type; })
-    .attr ("marker-end", function(d) { return "url(#" + d.type + ")"; });
+  var path = svg.append("g").selectAll("path")
+      .data (force.links())
+      .enter().append("path")
+      .attr ("class", function(d) { return "link " + d.type; })
+      .attr ("marker-end", function(d) { return "url(#" + d.type + ")"; });
 
-var circle = svg.append("g").selectAll("circle")
+  var circle = svg.append("g").selectAll("circle")
     .data(force.nodes())
     .enter().append("circle")
     .attr("r", 6)
     .call(force.drag);
 
-var text = svg.append("g").selectAll("text")
+  var text = svg.append("g").selectAll("text")
     .data(force.nodes())
     .enter().append("text")
     .attr("x", 8)
     .attr("y", ".31em")
     .text(function(d) { return d.name; });
 
-// Use elliptical arc path segments to doubly-encode directionality.
-function tick() {
-  path.attr("d", linkArc);
-  circle.attr("transform", transform);
-  text.attr("transform", transform);
-}
+  // Use elliptical arc path segments to doubly-encode directionality.
+  function tick() {
+    path.attr("d", linkArc);
+    circle.attr("transform", transform);
+    text.attr("transform", transform);
+  }
 
-function linkArc(d) {
-  var dx = d.target.x - d.source.x,
+  function linkArc(d) {
+    var dx = d.target.x - d.source.x,
       dy = d.target.y - d.source.y,
       dr = Math.sqrt(dx * dx + dy * dy);
-  return "M" + d.source.x + "," + d.source.y + "A" + dr + "," + dr + " 0 0,1 " + d.target.x + "," + d.target.y;
-}
+    return "M" + d.source.x + "," + d.source.y + "A" + dr + "," + dr + " 0 0,1 " + d.target.x + "," + d.target.y;
+  }
 
-function transform(d) {
-  return "translate(" + d.x + "," + d.y + ")";
-}
+  function transform(d) {
+    return "translate(" + d.x + "," + d.y + ")";
+  }
 
+}
 </script>
 
 
