--- a/working2/index.html
+++ b/working2/index.html
@@ -75,7 +75,7 @@ d3.json("https://raw.githubusercontent.com/shepner/ConceptMap/master/working2/tr
   }
 );
 
-visualizeit(link) {
+function visualizeit(link) {
   
   alert("hello");
 
