--- a/working2/index.html
+++ b/working2/index.html
@@ -65,7 +65,8 @@
   {source: "Nokia", target: "Qualcomm", type: "suit"}
 ];*/
 
-d3.json("https://raw.githubusercontent.com/shepner/ConceptMap/master/working2/treeData.json",
+//d3.json("https://raw.githubusercontent.com/shepner/ConceptMap/master/working2/treeData.json",
+d3.json("https://shepner.github.io/ConceptMap/working2//treeData.json",
   function(error, jsonData) {
     if (error) return console.warn(error);
     data = jsonData;
