--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <script>
 
-d3.json("https://shepner.github.io/ConceptMap/working2//treeData.json",
+d3.json("https://shepner.github.io/ConceptMap/treeData.json",
   function(error, jsonData) {
     if (error) return console.warn(error);
     data = jsonData;
